--- a/HTML5Template/index copy.html
+++ b/HTML5Template/index copy.html
@@ -53,7 +53,7 @@
 						<div class="inner">
 							<header>
 								<h1>This is Smila Blinstrubaite's GIS maps</h1>
-								<p>Here you can find the maps I made on QGIS and ArcGIS.</p>
+								<p>In here you can find the maps I made on QGIS and ArcGIS.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
