--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Britta Ricker Website</title>
+		<title>Smila Blinstrubaite Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +21,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/icon.png" alt="" /></span><span class="title">Testing</span>
+								<a href="index copy.html" class="logo">
+									<span class="symbol"><img src="images/icon.png" alt="" /></span><span class="title">Home</span>
 								</a>
 
 							<!-- Nav -->
@@ -39,12 +39,12 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Vector</a></li>
-							<li><a href="choropleth.html">Choropleth</a></li>
-							<li><a href="generic.html">Land Cover</a></li>
-							<li><a href="generic.html">Choropleth Map</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="index copy.html">Home</a></li>
+							<li><a href="generic.html">About</a></li>
+							<li><a href="choropleth.html">Choropleth Maps</a></li>
+							<li><a href="generic.html">Vector Map</a></li>
+							<li><a href="generic.html">Land Cover Map</a></li>
+							<li><a href="elements.html">Other Maps</a></li>
 						</ul>
 					</nav>
 
@@ -52,9 +52,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>This is Smila Blinstrubaite's GIS maps</h1>
+								<p>In here you can find the maps I made on QGIS and ArcGIS.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -62,7 +61,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>About</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -70,12 +69,12 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/sat.png" alt="" />
+										<img src="images/number_of_refugees.png" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Vector</h2>
+									<a href="choropleth.html">
+										<h2>Choropleth</h2>
 										<div class="content">
-											<p>Points Trees</p>
+											<p>Number of refugees</p>
 										</div>
 									</a>
 								</article>
@@ -84,7 +83,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>Vector</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -95,7 +94,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>Land Cover</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -106,7 +105,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Other</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -117,7 +116,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Other 2</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -128,7 +127,7 @@
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ipsum</h2>
+										<h2>Other 3</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -139,7 +138,7 @@
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dolor</h2>
+										<h2>Other 4</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -150,7 +149,7 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Nullam</h2>
+										<h2>Other 5</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -161,7 +160,7 @@
 										<img src="images/pic10.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ultricies</h2>
+										<h2>Other 6</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -172,7 +171,7 @@
 										<img src="images/pic11.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dictum</h2>
+										<h2>Other 7</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
@@ -183,7 +182,7 @@
 										<img src="images/pic12.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Pretium</h2>
+										<h2>Other 8</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
