--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index copy.html" class="logo">
+								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/icon.png" alt="" /></span><span class="title">Home</span>
 								</a>
 
@@ -39,7 +39,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index copy.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About</a></li>
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
 							<li><a href="generic.html">Vector Map</a></li>
