--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
 							<li><a href="generic.html">Vector Map</a></li>
 							<li><a href="generic.html">Land Cover Map</a></li>
-							<li><a href="elements.html">Other Maps</a></li>
+							<li><a href="elements.html">Carbon Sequestration Map</a></li>
 						</ul>
 					</nav>
 
@@ -105,9 +105,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Other</h2>
+										<h2>Carbon Sequestration</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>This is carbon sequestration map made on google earth engine.</p>
 										</div>
 									</a>
 								</article>
@@ -115,7 +115,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="carbon.html">
 										<h2>Other 2</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
