--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
 							<li><a href="generic.html">Vector Map</a></li>
 							<li><a href="generic.html">Land Cover Map</a></li>
-							<li><a href="elements.html">Carbon Sequestration Map</a></li>
+							<li><a href="carbon.html">Carbon Sequestration Map</a></li>
 						</ul>
 					</nav>
 
@@ -104,7 +104,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="carbon.html">
 										<h2>Carbon Sequestration</h2>
 										<div class="content">
 											<p>This is carbon sequestration map made on google earth engine.</p>
