--- a/carbon.html
+++ b/carbon.html
@@ -51,11 +51,9 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Choropleth Map</h1>
-							<p>Here is my choropleth map I made with real UN SDG indicator data on the number of refugees per 100 000 people from country of origin. I made the map using QGIS.</p>
-							<span class="image main"><img src="images/number_of_refugees.png" alt="" /></span>
-							<p>Here is the map using the same indicator data on ArcGIS.</p>
-						<iframe src="hhttps://ee-smilablinstrubaite.projects.earthengine.app/view/carbon" width="100%" height="800px" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
+							<h1>Carbon Sequestration Map</h1>
+							<p>Here is carbon sequestration map I made with Google Earth Engine showing the gross primary production (GPP) and aboveground carbon density (ACD) of an area in Myanmar.</p>
+						<iframe src="https://ee-smilablinstrubaite.projects.earthengine.app/view/carbon" width="100%" height="800px" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 						
 						
 						</div>
