--- a/carbon.html
+++ b/carbon.html
@@ -40,11 +40,12 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About</a></li>
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
-							<li><a href="generic.html">Vector Map</a></li>
-							<li><a href="generic.html">Land Cover Map</a></li>
-							<li><a href="elements.html">Other Maps</a></li>
+							<li><a href="vector.html">Vector Map</a></li>
+							<li><a href="land_cover.html">Land Cover Map</a></li>
+							<li><a href="carbon.html">Carbon Sequestration Map</a></li>
+							<li><a href="rem.html">Relative Elevation Model</a></li>
+							<li><a href="lidar.html">LiDAR Map</a></li>
 						</ul>
 					</nav>
 
@@ -52,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Carbon Sequestration Map</h1>
-							<p>Here is carbon sequestration map I made with Google Earth Engine showing the gross primary production (GPP) and aboveground carbon density (ACD) of an area in Myanmar.</p>
+							<p>Here is a carbon sequestration map I made with Google Earth Engine showing the gross primary production (GPP) and aboveground carbon density (ACD) of an area in Myanmar.</p>
 						<iframe src="https://ee-smilablinstrubaite.projects.earthengine.app/view/carbon" width="100%" height="800px" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 						
 						
