--- a/choropleth.html
+++ b/choropleth.html
@@ -39,12 +39,13 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index copy.html">Home</a></li>
-							<li><a href="generic.html">About</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
-							<li><a href="generic.html">Vector Map</a></li>
-							<li><a href="generic.html">Land Cover Map</a></li>
-							<li><a href="elements.html">Other Maps</a></li>
+							<li><a href="vector.html">Vector Map</a></li>
+							<li><a href="land_cover.html">Land Cover Map</a></li>
+							<li><a href="carbon.html">Carbon Sequestration Map</a></li>
+							<li><a href="rem.html">Relative Elevation Model</a></li>
+							<li><a href="lidar.html">LiDAR Map</a></li>
 						</ul>
 					</nav>
 
