--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">About</a></li>
 							<li><a href="choropleth.html">Choropleth Maps</a></li>
-							<li><a href="generic.html">Vector Map</a></li>
-							<li><a href="generic.html">Land Cover Map</a></li>
+							<li><a href="vector.html">Vector Map</a></li>
+							<li><a href="land_cover.html">Land Cover Map</a></li>
 							<li><a href="carbon.html">Carbon Sequestration Map</a></li>
+							<li><a href="rem.html">Relative Elevation Model</a></li>
+							<li><a href="lidar.html">Lidar map</a></li>
 						</ul>
 					</nav>
 
@@ -53,138 +54,73 @@
 						<div class="inner">
 							<header>
 								<h1>This is Smila Blinstrubaite's GIS maps</h1>
-								<p>In here you can find the maps I made on QGIS and ArcGIS.</p>
+								<p>In here you can find the maps I made on QGIS, ArcGIS, and Google Earth Engine.</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>About</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/number_of_refugees.png" alt="" />
+										<img src="images/choropleth_icon.png" alt="" />
 									</span>
 									<a href="choropleth.html">
 										<h2>Choropleth</h2>
 										<div class="content">
-											<p>Number of refugees</p>
+											<p>These are choropleth maps made on QGIS</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/vector_icon.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="vector.html">
 										<h2>Vector</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>These are vector maps made on ArcGIS.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/land_cover_icon.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="land_cover.html">
 										<h2>Land Cover</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>These are land cover maps made on ArcGIS.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/carbon_icon.png" alt="" />
 									</span>
 									<a href="carbon.html">
 										<h2>Carbon Sequestration</h2>
 										<div class="content">
-											<p>This is carbon sequestration map made on google earth engine.</p>
+											<p>This is a carbon sequestration map made on Google Earth Engine.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/rem_icon.png" alt="" />
 									</span>
-									<a href="carbon.html">
-										<h2>Other 2</h2>
+									<a href="rem.html">
+										<h2>Relative Elevation Model</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>This is a REM made on QGIS.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/lidar_icon.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Other 3</h2>
+										<h2>Lidar</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Other 4</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Other 5</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Other 6</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Other 7</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Other 8</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>This is a map made using lidar data on ArcGIS.</p>
 										</div>
 									</a>
 								</article>
