--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									<span class="image">
 										<img src="images/lidar_icon.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="lidar.html">
 										<h2>Lidar</h2>
 										<div class="content">
 											<p>This is a map made using lidar data on ArcGIS.</p>
